NXP-6945: Add the possibility to order items in the list widget

--- a/nuxeo-platform-forms-layout-client/src/main/resources/web/nuxeo.war/widgets/list_widget_template.xhtml
+++ b/nuxeo-platform-forms-layout-client/src/main/resources/web/nuxeo.war/widgets/list_widget_template.xhtml
@@ -39,15 +39,41 @@
           required="#{widget.required}" diff="#{widget.properties['diff']}">
 
           <h:panelGrid columns="2">
-            <a4j:commandLink immediate="true"
-              actionListener="#{editableListBean.performAction}"
-              id="#{widget.id}_delete" reRender="#{widget.id}_input"
-              bypassUpdates="true">
-              <h:graphicImage value="/icons/action_delete.gif" />
-              <f:param name="for" value="#{widget.id}_input" />
-              <f:param name="index" value="#{model.rowIndex}" />
-              <f:param name="type" value="remove" />
-            </a4j:commandLink>
+            <h:panelGroup>
+              <a4j:commandLink immediate="true"
+                actionListener="#{editableListBean.performAction}"
+                id="#{widget.id}_delete" reRender="#{widget.id}_input"
+                bypassUpdates="true">
+                <h:graphicImage value="/icons/action_delete.gif" />
+                <f:param name="for" value="#{widget.id}_input" />
+                <f:param name="index" value="#{model.rowIndex}" />
+                <f:param name="type" value="remove" />
+              </a4j:commandLink>
+
+              <c:if test="#{widgetProperty_orderable}">
+                <a4j:commandLink immediate="true"
+                  actionListener="#{editableListBean.performAction}"
+                  id="#{widget.id}_move_down" reRender="#{widget.id}_input"
+                  bypassUpdates="true" rendered="#{model.rowIndex != model.rowCount - 1}">
+                  <h:graphicImage value="/icons/go_down.png" />
+                  <f:param name="for" value="#{widget.id}_input" />
+                  <f:param name="index" value="#{model.rowIndex}" />
+                  <f:param name="type" value="movedown" />
+                </a4j:commandLink>
+                <h:graphicImage value="/icons/inactive_go_down.png" rendered="#{model.rowIndex == model.rowCount - 1}" />
+
+                <a4j:commandLink immediate="true"
+                  actionListener="#{editableListBean.performAction}"
+                  id="#{widget.id}_move_up" reRender="#{widget.id}_input"
+                  bypassUpdates="true" rendered="#{model.rowIndex != 0}">
+                  <h:graphicImage value="/icons/go_up.png" />
+                  <f:param name="for" value="#{widget.id}_input" />
+                  <f:param name="index" value="#{model.rowIndex}" />
+                  <f:param name="type" value="moveup" />
+                </a4j:commandLink>
+                <h:graphicImage value="/icons/inactive_go_up.png" rendered="#{model.rowIndex == 0}" />
+              </c:if>
+            </h:panelGroup>
 
             <h:panelGroup>
               <h:panelGrid columns="1">
