NXP-6939 Add Content View with Search Form in the admin center

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/admin_subview_selector.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/admin_subview_selector.xhtml
@@ -3,7 +3,7 @@
   xmlns:nxu="http://nuxeo.org/nxweb/util"
   xmlns:nxd="http://nuxeo.org/nxweb/document"
   class="tabsBar">
-  <h:form>
+  <a4j:form ajaxSubmit="true">
     <nxu:dataList layout="unorderedList" var="adminSubTab" value="#{adminViews.availableSubActions}"
       itemStyleClass="#{nxu:test(adminViews.currentSubViewId == adminSubTab.id, 'selected', '')}">
 
@@ -12,5 +12,5 @@
       </a4j:commandLink>
 
     </nxu:dataList>
-  </h:form>
+  </a4j:form>
 </div>
