--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/usersActivity/usersActivity.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/usersActivity/usersActivity.xhtml
@@ -3,103 +3,25 @@
   xmlns:nxu="http://nuxeo.org/nxweb/util"
   xmlns:nxd="http://nuxeo.org/nxweb/document"
   xmlns:c="http://java.sun.com/jstl/core"
-  xmlns:f="http://java.sun.com/jsf/core">
-
+  xmlns:ui="http://java.sun.com/jsf/facelets"
+  xmlns:f="http://java.sun.com/jsf/core"
+  xmlns:nxh="http://nuxeo.org/nxweb/html">
 
 <h2><h:outputText
   value="#{messages['adminsubtab.sysinfo.userinfo.title']}" /></h2>
 
-<a4j:outputPanel id="userEventsListing">
+<a4j:outputPanel id="usersEventsListing">
 
-  <h:form>
-    <h:outputText
-      value="#{messages['adminsubtab.sysinfo.userinfo.timerange']}" /> :
-  <h:selectOneListbox class="dataInputText" size="1"
-      value="#{usersActivityInfo.selectedAuditTimeRange}"
-      onchange="jQuery('#auditFilterSubmitButton').children()[0].click();">
+<a4j:log level="ALL" popup="true" width="400" height="200"/>
 
-      <nxu:selectItems value="#{usersActivityInfo.auditTimeRanges}"
-        var="itype" itemValue="#{itype.value}"
-        itemLabel="#{messages[itype.label]}" />
-    </h:selectOneListbox>
-    <f:verbatim>&amp;nbsp;</f:verbatim>
-     <h:outputText
-      value="#{messages['adminsubtab.sysinfo.userinfo.category']}" /> :
-   <h:selectOneListbox class="dataInputText" size="1"
-      value="#{usersActivityInfo.selectedAuditCategory}"
-      onchange="jQuery('#auditFilterSubmitButton').children()[0].click();">
+  <nxu:set var="contentViewName" value="EVENTS_VIEW">
+    <ui:decorate template="/incl/content_view.xhtml">
+      <ui:define name="content_view_title">
+      </ui:define>
+      <ui:define name="content_view_syndication_buttons">
+      </ui:define>
+    </ui:decorate>
+  </nxu:set>
 
-      <nxu:selectItems value="#{usersActivityInfo.auditCategories}"
-        var="itype" itemValue="#{itype.value}"
-        itemLabel="#{messages[itype.label]}" />
-    </h:selectOneListbox>
-
-    <div style="display: none;" id="auditFilterSubmitButton"><a4j:commandButton value="submit"
-      reRender="userEventsListing" /></div>
-
-  </h:form>
-
-  <h:form>
-    <center><a4j:commandLink
-      value="#{messages['admcommand.audit.prevPage']}"
-      actionListener="#{usersActivityInfo.prevAuditPage()}"
-      reRender="userEventsListing" /> -- <h:outputText
-      value="#{messages['adminsubtab.sysinfo.userinfo.page']}" />: <h:outputText
-      value="#{usersActivityInfo.getCurrentAuditPage()}" /> -- <a4j:commandLink
-      value="#{messages['admcommand.audit.nextPage']}"
-      actionListener="#{usersActivityInfo.nextAuditPage()}"
-      reRender="userEventsListing" /></center>
-  </h:form>
-
-  <nxu:dataTable id="dataTable" value="#{userLoginEvents}" var="row"
-    rowClasses="dataRowEven,dataRowOdd" styleClass="dataOutput">
-
-
-    <!--  Date -->
-    <nxu:column>
-      <f:facet name="header">
-        <h:outputText value="#{messages['label.event.date']}" />
-      </f:facet>
-      <h:outputText value="#{row.eventDate}">
-        <f:convertDateTime type="both" dateStyle="medium" timeStyle="medium" />
-      </h:outputText>
-    </nxu:column>
-
-    <!--  Id -->
-    <nxu:column>
-      <f:facet name="header">
-        <h:outputText value="#{messages['label.event.id']}" />
-      </f:facet>
-      <h:outputText value="#{row.eventId}" />
-    </nxu:column>
-
-    <!--  principal -->
-    <nxu:column>
-      <f:facet name="header">
-        <h:outputText value="#{messages['label.event.principal']}" />
-      </f:facet>
-      <h:outputText value="#{row.principalName}" />
-    </nxu:column>
-
-    <!--  doc -->
-    <nxu:column>
-      <f:facet name="header">
-        <h:outputText value="#{messages['label.event.document']}" />
-      </f:facet>
-      <h:outputText value="#{row.docPath}" />
-      <h:panelGroup rendered="#{row.docUUID!=null}">
-      <br/>
-      <h:outputText value="#{row.docUUID}" /> (<h:outputText value="#{row.docLifeCycle}" />)
-      </h:panelGroup>
-    </nxu:column>
-
-    <!--  comment -->
-    <nxu:column>
-      <f:facet name="header">
-        <h:outputText value="#{messages['label.event.comment']}" />
-      </f:facet>
-      <h:outputText value="#{row.comment}" />
-    </nxu:column>
-  </nxu:dataTable>
-
-</a4j:outputPanel></div>
+</a4j:outputPanel>
+</div>
