--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/usersActivity/usersSessions.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/usersActivity/usersSessions.xhtml
@@ -9,20 +9,14 @@
 <h2><h:outputText
   value="#{messages['adminsubtab.usersActivity.userSessions.title']}" /></h2>
 
-<a4j:log level="ALL" popup="true" width="400" height="200"/>
 <a4j:outputPanel ajaxRendered="true">
-<h:messages/>
-</a4j:outputPanel>
-<h:outputText
+  <h:messages />
+</a4j:outputPanel> <h:outputText
   value="#{messages['adminsubtab.usersActivity.userSessions.total']}" /><f:verbatim>&amp;nbsp;</f:verbatim>
-<h:outputText
-  value="#{nbActiveUserHttpSessions}"/>
-<br/>
+<h:outputText value="#{nbActiveUserHttpSessions}" /> <br />
 <h:outputText
   value="#{messages['adminsubtab.usersActivity.requests.total']}" /><f:verbatim>&amp;nbsp;</f:verbatim>
-<h:outputText
-  value="#{nbUserRequests}"/>
-<br/>
+<h:outputText value="#{nbUserRequests}" /> <br />
 
 <a4j:outputPanel id="usersHttpSessionsListing">
 
