NXP-6964 use contextPath instead of hard-coded /nuxeo

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/appcenter/connectLocal.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/appcenter/connectLocal.xhtml
@@ -35,8 +35,8 @@
     </h:form>
   </div>
 
-  <iframe src="/nuxeo/site/connectClient/packages/local?type=#{appsViews.packageTypeFilter}" frameborder="0" scrolling="auto" width="100%" height="500px">
-    <img src="/nuxeo/img/big_loading.gif"/>
+  <iframe src="#{contextPath}/site/connectClient/packages/local?type=#{appsViews.packageTypeFilter}" frameborder="0" scrolling="auto" width="100%" height="500px">
+    <img src="#{contextPath}/img/big_loading.gif"/>
   </iframe>
 </a4j:outputPanel>
 </div>
