--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/appcenter/connectRemote.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/appcenter/connectRemote.xhtml
@@ -59,18 +59,18 @@ function hideWaiter() {
 </script>
 <c:if test="#{connectServerReachable and registredConnectInstance}">
   <c:if test="#{!adminViews.hasExternalPackageDownloadRequest()}">
-    <iframe src="/nuxeo/site/connectClient/packages/remote?type=#{appsViews.packageTypeFilter}&amp;onlyRemote=#{appsViews.onlyRemote}&amp;filterOnPlatform=#{appsViews.platformFilter}" frameborder="0" scrolling="auto" width="100%" height="500px"
+    <iframe src="#{contextPath}/site/connectClient/packages/remote?type=#{appsViews.packageTypeFilter}&amp;onlyRemote=#{appsViews.onlyRemote}&amp;filterOnPlatform=#{appsViews.platformFilter}" frameborder="0" scrolling="auto" width="100%" height="500px"
     style="display:none" onload="javascript:hideWaiter();this.style.display='block';">
     </iframe>
   </c:if>
   <c:if test="#{adminViews.hasExternalPackageDownloadRequest()}">
-    <iframe src="/nuxeo/site/connectClient/download/start/#{adminViews.getExternalPackageDownloadRequest()}?source=remote" frameborder="0" scrolling="auto" width="100%" height="500px"
+    <iframe src="#{contextPath}/site/connectClient/download/start/#{adminViews.getExternalPackageDownloadRequest()}?source=remote" frameborder="0" scrolling="auto" width="100%" height="500px"
     style="display:none" onload="javascript:hideWaiter();this.style.display='block';" >
     </iframe>
   </c:if>
 
   <div id="connectLoaderWaiter" style="width:100%;height:200px;text-align:center">
-      <img src="/nuxeo/img/big_loading.gif"/>
+      <img src="#{contextPath}/img/big_loading.gif"/>
   </div>
 
 </c:if>
