--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/sysinfo/binariesInfo.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/sysinfo/binariesInfo.xhtml
@@ -21,7 +21,7 @@
     <h:panelGroup rendered="#{systemInfo.isBinariesGCInProgress()}">
       <div><h:outputText
         value="#{messages['adminsubtab.sysinfo.binariesinfo.wait']}" /></div>
-      <img src="/nuxeo/img/big_loading.gif" />
+      <img src="#{contextPath}/img/big_loading.gif" />
     </h:panelGroup>
 
     <h:panelGroup rendered="#{!systemInfo.isBinariesGCInProgress()}">
