--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/sysinfo/reposInfo.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/sysinfo/reposInfo.xhtml
@@ -26,7 +26,7 @@
 
      <h:panelGroup rendered="#{systemInfo.isStatInfoInProgress()}">
        <div><h:outputText value="#{messages['adminsubtab.sysinfo.repostat.computing']}" /> </div>
-       <img src="/nuxeo/img/big_loading.gif"/>
+       <img src="#{contextPath}/img/big_loading.gif"/>
      </h:panelGroup>
 
      <h:panelGroup rendered="#{!systemInfo.isStatInfoInProgress()}">
