--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/appcenter/connectUpdates.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/appcenter/connectUpdates.xhtml
@@ -45,12 +45,12 @@ function hideWaiter() {
 </script>
 
   <c:if test="#{connectServerReachable and registredConnectInstance}">
-    <iframe src="/nuxeo/site/connectClient/packages/updates?type=#{appsViews.packageTypeFilter}&amp;filterOnPlatform=#{appsViews.platformFilter}" frameborder="0" scrolling="auto" width="100%" height="500px"
+    <iframe src="#{contextPath}/site/connectClient/packages/updates?type=#{appsViews.packageTypeFilter}&amp;filterOnPlatform=#{appsViews.platformFilter}" frameborder="0" scrolling="auto" width="100%" height="500px"
     style="display:none" onload="javascript:hideWaiter();this.style.display='block';" >
     </iframe>
 
   <div id="connectLoaderWaiter" style="width:100%;height:200px;text-align:center">
-      <img src="/nuxeo/img/big_loading.gif"/>
+      <img src="#{contextPath}/img/big_loading.gif"/>
   </div>
 
   </c:if>
