--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/footer_galaxy.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/footer_galaxy.xhtml
@@ -5,10 +5,10 @@
 
 <ui:insert name="footer">
  <h:outputText value="#{messages['label.login.copyright']}" />  
-  <h:outputLink onclick="window.open(this.href); return false;" value="http://nuxeo.com/subscription/connect?utm_source=dm&amp;utm_medium=pages-footer&amp;utm_campaign=products">
+  <h:outputLink onclick="window.open(this.href); return false;" value="http://www.nuxeo.com/en/services/connect?utm_source=dm&amp;utm_medium=pages-footer&amp;utm_campaign=products">
   <h:outputText value="#{messages['label.login.getSupport']}" />
     </h:outputLink> | <!-- &nbsp; -->
-  <h:outputLink onclick="window.open(this.href); return false;" value="http://www.nuxeo.org/discussions/index.jspa?utm_source=dm&amp;utm_medium=pages-footer&amp;utm_campaign=products">
+  <h:outputLink onclick="window.open(this.href); return false;" value="http://forum.nuxeo.com/?utm_source=dm&amp;utm_medium=pages-footer&amp;utm_campaign=products">
     <h:outputText value="#{messages['label.login.forums']}" />
   </h:outputLink>
   | <!-- &nbsp; -->
