NXP-6817: fix link.

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/footer_galaxy_admin.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/footer_galaxy_admin.xhtml
@@ -9,7 +9,7 @@
   <h:outputLink onclick="window.open(this.href); return false;" value="http://nuxeo.com/subscription/connect?utm_source=dm&amp;utm_medium=pages-footer&amp;utm_campaign=products">
   <h:outputText value="#{messages['label.login.getSupport']}" />
     </h:outputLink> | <!-- &nbsp; -->
-  <h:outputLink onclick="window.open(this.href); return false;" value="http://www.nuxeo.org/discussions/index.jspa?utm_source=dm&amp;utm_medium=pages-footer&amp;utm_campaign=products">
+  <h:outputLink onclick="window.open(this.href); return false;" value="http://forum.nuxeo.com/?utm_source=dm&amp;utm_medium=pages-footer&amp;utm_campaign=products">
     <h:outputText value="#{messages['label.login.forums']}" />
   </h:outputLink>
   | <!-- &nbsp; -->
