NXP-6414: rerender also the content views actions + cleanup

--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/users/view_groups_listing_template.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/users/view_groups_listing_template.xhtml
@@ -36,7 +36,8 @@
 
         <ui:define name="pageNavigationControls" >
           <ui:include src="/pagination/a4jPageNavigationControls.xhtml">
-            <ui:param name="contentIdToBeReRendered" value="#{contentViewRenderId}_resultsPanel" />
+            <ui:param name="contentIdToBeReRendered"
+              value="#{contentViewRenderId}_resultsPanel,#{contentViewRenderId}_contentViewActionsPanel" />
           </ui:include>
         </ui:define>
       </ui:decorate>
