--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/users/view_many_users_listing.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/users/view_many_users_listing.xhtml
@@ -22,7 +22,7 @@
                 <li class="#{cssClass}">
                   <a4j:commandLink action="#{userManagementActions.setSelectedLetter(letter)}"
                     ajaxSingle="true"
-                    reRender="#{contentViewRenderId}_resultsPanel">
+                    reRender="usersListingPanel">
                     <h:outputText value="#{letter}" />
                   </a4j:commandLink>
                 </li>
