fix selenium tests

--- a/nuxeo-distribution-dm/ftest/selenium/tests/testMultipleDomainsDashboard.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/testMultipleDomainsDashboard.html
@@ -246,11 +246,13 @@
 	<td>selectDashboardDomain:dashboardDomainSubmitButton</td>
 	<td></td>
 </tr>
+<!-- Since NXP-6418, the user login is also a link
 <tr>
 	<td>verifyElementNotPresent</td>
 	<td>link=jdoe</td>
 	<td></td>
 </tr>
+-->
 <tr>
 	<td>verifyElementNotPresent</td>
 	<td>link=testWorkspace1</td>
