NXP-6727 Allow multiple users to sign the same document

--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createWorkspace.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createWorkspace.html
@@ -117,8 +117,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>userServicesForm:userServicesBottomActionsTable:0:userServicesBottomActionLink</td>
+	<td>open</td>
+	<td>/nuxeo/logout</td>
 	<td></td>
 </tr>
 </tbody></table>
