--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/tree_explorer.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/tree_explorer.xhtml
@@ -15,7 +15,7 @@
      <a4j:form ajaxSubmit="true">
      <div style="float:right">
          <a4j:commandLink action="#{treeActions.reset}" reRender="treeNav">
-           <h:graphicImage value="/img/refresh.png"
+           <h:graphicImage value="/icons/refresh.png"
             alt="#{messages['label.refresh']}"
             title="#{messages['label.refresh']}" />
          </a4j:commandLink>
