NXP-6978: update old add and delete icons, move refresh icon from img to icons directory

--- a/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/incl/content_view_result_layout_selector.xhtml
+++ b/nuxeo-platform-webapp-base/src/main/resources/web/nuxeo.war/incl/content_view_result_layout_selector.xhtml
@@ -48,7 +48,7 @@ Needed parameters:
             reRender="#{contentViewRenderId}_resultsPanel"
             oncomplete="initNXDrapAndDropOnPage(jQuery('#' + '#{contentViewRenderId}_panel'));"
             ajaxSingle="true">
-            <h:graphicImage value="/img/refresh.png"
+            <h:graphicImage value="/icons/refresh.png"
              alt="#{messages['label.refresh']}"
              title="#{messages['label.refresh']}"
              id="refreshContentViewImage" />
