NXP-6978: move studio icon from img to icons directory

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/appcenter/studio.xhtml
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/web/nuxeo.war/incl/appcenter/studio.xhtml
@@ -41,7 +41,7 @@
           </td>
           <td style="text-align:center;vertical-align:middle">
           <c:if test="#{connectServerReachable and registredConnectInstance}">
-          <a target="studio" href="https://connect.nuxeo.com/nuxeo/site/studio/ide"><img src="/nuxeo/img/studio32.png"/><h:outputText value="#{messages['action.studio.go']}" styleClass="boldLabel"/>
+          <a target="studio" href="https://connect.nuxeo.com/nuxeo/site/studio/ide"><img src="/nuxeo/icons/studio32.png"/><h:outputText value="#{messages['action.studio.go']}" styleClass="boldLabel"/>
           </a>
           </c:if>
           </td>
