Selenium text fix

--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/signPDF.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/signPDF.html
@@ -98,7 +98,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>This document is signed</td>
+	<td>This certificate belongs to</td>
 	<td></td>
 </tr>
 <tr>
