NXP-6864 save work in progress before the BugDay

--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/nuxeo_header.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/nuxeo_header.xhtml
@@ -54,7 +54,14 @@
          </nxu:set>
        </li>
      </ul>
+
    </div>
+
+    <c:if test="#{availableHotFixCount!=null and availableHotFixCount>=0}">
+     <div style="float:left; color:white">
+      #{availableHotFixCount} update available
+     </div>
+    </c:if>
 
    <div class="userActions">
 
