NXP-6993: make it possible to handle different context document for each main tab

--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/nuxeo_header.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/nuxeo_header.xhtml
@@ -16,7 +16,7 @@
      <ul>
        <nxu:dataList var="mainTab" value="#{webActions.getActionsList('MAIN_TABS')}">
          <li class="#{nxu:test(webActions.getCurrentTabId('MAIN_TABS') == mainTab.id, 'selected', '')}">
-           <nxd:restDocumentLink document="#{currentDocument}"
+           <nxd:restDocumentLink document="#{mainTabsActions.getDocumentFor(mainTab.id)}"
              view="#{mainTab.getLink()}" addTabInfo="false"
              tabs="MAIN_TABS:#{mainTab.id}">
              <h:outputText value="#{messages[mainTab.label]}" />
