--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/includes.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/includes.xhtml
@@ -31,6 +31,11 @@
 
 <script>
 var baseURL='#{baseURL}';
+function getBaseURL()
+{
+  return baseURL;
+}
+
 var ctx = { currentDocument : '#{currentDocument.id}',
         <c:if test="#{currentDomain!=null}">
         currentDomain : '#{currentDomain.id}',
